# uhi-drivers-lausanne

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  environment.yml  pyproject.toml
notebooks/: building-features.ipynb  cws-download-data.ipynb  cws-qc.ipynb  elev-features.ipynb  lake-features.ipynb  merge-features.ipynb  merge-official-cws-data.ipynb  netatmo-preprocessing.ipynb  netatmo-quality-control.ipynb  official-data.ipynb  official-stations-preprocessing.ipynb  tree-canopy.ipynb  tree-features.ipynb  uhi-eda.ipynb
uhi_drivers_lausanne/: __init__.py  canopy_utils.py  cws_qc.py  netatmo_utils.py  official_stations_utils.py  plot_utils.py  regr_utils.py  settings.py  stac_utils.py
