[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uhi-drivers-lausanne"
version = "0.1.0"
description = "Study of the drivers of the urban heat island effect in Lausanne, Switzerland"
authors = [{ name = "Martí Bosch", email = "marti.bosch@epfl.ch" }]
readme = "README.md"
license = { text = "GPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/martibosch/uhi-drivers-lausanne"

[tool.setuptools.packages.find]
include = ["uhi_drivers_lausanne", "uhi_drivers_lausanne.*"]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88
select = ["D", "E", "F", "I"]

[tool.ruff.isort]
known-first-party = ["uhi_drivers_lausanne"]

[tool.nbqa.addopts]
# ignore documentation errors in notebooks
ruff = ["--ignore=D"]
